# SPDX-License-Identifier: PMPL-1.0-or-later
# Kea-Beak: General-purpose system auditor

[package]
name = "kea-beak"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "General-purpose filesystem auditor with high throughput"
keywords = ["audit", "filesystem", "security", "scanning"]

[dependencies]
walkdir.workspace = true
ignore.workspace = true
globset.workspace = true
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
sha2.workspace = true
blake3.workspace = true

[dev-dependencies]
tempfile.workspace = true
